--- a/SpendingMultiplier(H)/Layouts/mx_3_main(h).xml
+++ b/SpendingMultiplier(H)/Layouts/mx_3_main(h).xml
@@ -364,6 +364,7 @@
                     </properties>
                     <instance-variables>
                         <moneys>0</moneys>
+                        <myCost>1</myCost>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -506,6 +507,7 @@
                     </properties>
                     <instance-variables>
                         <moneys>0</moneys>
+                        <myCost>1</myCost>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -531,6 +533,7 @@
                     </properties>
                     <instance-variables>
                         <moneys>0</moneys>
+                        <myCost>1</myCost>
                     </instance-variables>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
@@ -1245,20 +1248,20 @@
                         <character-width>16</character-width>
                         <character-height>16</character-height>
                         <character-set>ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.,;:?!-_~#&quot;&apos;&amp;()[]|`\/@°+=*$£€&lt;&gt;</character-set>
-                        <text>1</text>
+                        <text>12</text>
                         <scale>6</scale>
                         <initial-visibility>Visible</initial-visibility>
                         <horizontal-alignment>Left</horizontal-alignment>
                         <vertical-alignment>Top</vertical-alignment>
                         <hotspot>Top-left</hotspot>
                         <wrapping>Word</wrapping>
-                        <character-spacing>0</character-spacing>
+                        <character-spacing>-30</character-spacing>
                         <line-height>0</line-height>
                     </properties>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>251</x>
+                        <x>225</x>
                         <y>473</y>
                         <z>0</z>
                         <width>296</width>
@@ -1509,6 +1512,28 @@
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
                         <hotspotY>0.5</hotspotY>
+                        <angle>0</angle>
+                        <opacity>1</opacity>
+                    </world>
+                </instance>
+                <instance type="mx_3_NP" uid="70">
+                    <properties>
+                        <initial-visibility>Visible</initial-visibility>
+                        <initial-animation>Default</initial-animation>
+                        <initial-frame>0</initial-frame>
+                        <collisions>Enabled</collisions>
+                    </properties>
+                    <blend-mode>0</blend-mode>
+                    <effect-fallback>0</effect-fallback>
+                    <world>
+                        <x>960</x>
+                        <y>600</y>
+                        <z>0</z>
+                        <width>1920</width>
+                        <height>1200</height>
+                        <depth>0</depth>
+                        <hotspotX>0.500520825</hotspotX>
+                        <hotspotY>0.500833333</hotspotY>
                         <angle>0</angle>
                         <opacity>1</opacity>
                     </world>
